# describeit

./: .gitignore  CMakeLists.txt  README.md
include/: describeit.h
test/: describeit.cpp  integer.cpp  main.cpp  math.cpp  test.cpp
